--- a/app/src/main/res/layout/activity_dodaj_post.xml
+++ b/app/src/main/res/layout/activity_dodaj_post.xml
@@ -33,16 +33,30 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+    <ImageButton
         android:id="@+id/lokalizacjaButton"
-        android:layout_width="155dp"
-        android:layout_height="53dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_marginStart="16dp"
-        android:text="Dodaj lokalizację"
+        android:src="@drawable/baseline_add_location_24"
+        android:scaleType="centerCrop"
+        android:background="@color/purple_200"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="110dp"/>
 
+    <TextView
+        android:id="@+id/wybranyAdres"
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:maxLines="1"
+        android:ellipsize="end"
+        android:layout_marginStart="75dp"
+        android:layout_marginTop="116dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/buttonAddPost"
